sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: not found: value test
    test=plusPetit(i-1,v)
    ^AlgInsertionSort:8: error: not found: value test
    while(test==false){
          ^AlgInsertionSort:9: error: not found: value c
      copie(i-1-c,i-c)
                ^AlgInsertionSort:9: error: not found: value c
      copie(i-1-c,i-c)
                    ^AlgInsertionSort:10: error: not found: value c
      c+=1
      ^AlgInsertionSort:11: error: not found: value test
      test=plusPetit(i-1-c,v)
      ^AlgInsertionSort:13: error: not found: value c
    setValeur(i-1-c,v)
                  ^