sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i=0
  var v=0
  for(i <- 1 to getNombreValeurs()-1){
    v=getValeur(i)
    test=plusPetit(i-1,v)
    while(test==false){
      copie(i-1-c,i-c)
      c+=1
      test=plusPetit(i-1-c,v)
    }
    setValeur(i-1-c,v)
  }
}